--- a/libray.html
+++ b/libray.html
@@ -69,7 +69,7 @@
                 </form>
                 <div class="Sign">
                     <ul>
-                        <li><a href="login">Log In</a></li>
+                        <li class="login"><a href="login">Log In</a></li>
                         <li class="signup"><a href="signup">Sign Up</a></li>
                         </ul>
                 </div>
